Bottom and footer section added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600&family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!--Top section-->
     <section class="header-section">
         
         <svg class="logo-top">
@@ -34,7 +35,7 @@
              </div>
         </div>
     </section>
-
+<!--Center section-->
     <section class="center-section">
 <div class="center-box1">
     <div class="center-box1-wrapper">
@@ -49,5 +50,53 @@
     <button class="center-box2-btn">I need Help</button>
 </div>
     </section>
+
+<!--Bottom Section-->
+<section class="bottom">
+    <div class="bottom-header">
+        <div class="bottom-header-box">
+        <h2 class="bottom-header-title">Services</h2></div>
+    </div>
+
+    <div class="bottom-wrapper">
+    <div class="bottom-boxes">
+        <img class="bottom-boxes-img" src="./img/bottom-1.png" alt="">
+        <h5 class="bottom-title-box">Lorem Ipsum</h5>
+    <p class="bottom-boxes-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p></div>
+    <div class="bottom-boxes"><img class="bottom-boxes-img" src="./img/bottom-2.png" alt=""><h5 class="bottom-title-box">Lorem Ipsum</h5><p class="bottom-boxes-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p></div>
+    <div class="bottom-boxes"><img class="bottom-boxes-img" src="./img/bottom-3.png" alt=""><h5 class="bottom-title-box">Lorem Ipsum</h5><p class="bottom-boxes-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p></div>
+    
+</div>
+
+<div class="bottom-btn-box">
+<button class="bottom-btn">I Need Help</button>
+</div>
+</section> 
+
+<footer class="footer">
+    <form action="">
+        <div class="footer-title-box">
+        <h2 class="footer-title">Contact Us</h2>
+        </div>
+<div class="footer-wrapper">
+        <div class="footer-boxes">
+            <input class="footer-input" type="text">
+            <input class="footer-input" type="text">
+            <input class="footer-input" type="text">
+            <button class="footer-btn">Send</button>
+        </div>
+
+        <div>
+            <ul class="footer-list">
+                <li><a href="mailto:test@gmail.com"><svg class="footer-svg" viewBox="0 0 24 24" width="20px" height="16px"><use href="./svg/footer-mail.svg#mail"></use></svg>test@gmail.com</a></li>
+                <li><a href="tel:(303) 555-0105"><svg class="footer-svg" viewBox="0 0 24 24" width="18px" height="18px"><use href="./svg/footer-phone.svg#phone"></use></svg>(303) 555-0105</a></li>
+                <li><a><svg href="2715 Ash Dr. San Jose, South Dakota 83475" class="footer-svg" viewBox="0 0 24 24" width="24px" height="20px"><use href="./svg/footer-location.svg#location"></use></svg>2715 Ash Dr. San Jose, South Dakota 83475</a></li>
+            </ul>
+        </div>
+</div>
+    </form>
+</footer>
+
+<div class="footer-bottom"></div>
 </body>
 </html>
