--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
     <div class="bottom-wrapper">
     <div class="bottom-boxes">
         <img class="bottom-boxes-img" src="./img/bottom-1.png" alt="">
-        <h5 class="bottom-title-box">Lorem Ipsum</h5>
-    <p class="bottom-boxes-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p></div>
-    <div class="bottom-boxes"><img class="bottom-boxes-img" src="./img/bottom-2.png" alt=""><h5 class="bottom-title-box">Lorem Ipsum</h5><p class="bottom-boxes-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p></div>
-    <div class="bottom-boxes"><img class="bottom-boxes-img" src="./img/bottom-3.png" alt=""><h5 class="bottom-title-box">Lorem Ipsum</h5><p class="bottom-boxes-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p></div>
+        <div class="bottom-box-text"><h5 class="bottom-title-box">Lorem Ipsum</h5>
+    <p class="bottom-boxes-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p></div></div>
+    <div class="bottom-boxes"><img class="bottom-boxes-img" src="./img/bottom-2.png" alt=""><div class="bottom-box-text"><h5 class="bottom-title-box">Lorem Ipsum</h5><p class="bottom-boxes-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p></div></div>
+    <div class="bottom-boxes"><img class="bottom-boxes-img" src="./img/bottom-3.png" alt=""><div class="bottom-box-text"><h5 class="bottom-title-box">Lorem Ipsum</h5><p class="bottom-boxes-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p></div></div>
     
 </div>
 
@@ -88,15 +88,16 @@
 
         <div>
             <ul class="footer-list">
-                <li><a href="mailto:test@gmail.com"><svg class="footer-svg" viewBox="0 0 24 24" width="20px" height="16px"><use href="./svg/footer-mail.svg#mail"></use></svg>test@gmail.com</a></li>
-                <li><a href="tel:(303) 555-0105"><svg class="footer-svg" viewBox="0 0 24 24" width="18px" height="18px"><use href="./svg/footer-phone.svg#phone"></use></svg>(303) 555-0105</a></li>
-                <li><a><svg href="2715 Ash Dr. San Jose, South Dakota 83475" class="footer-svg" viewBox="0 0 24 24" width="24px" height="20px"><use href="./svg/footer-location.svg#location"></use></svg>2715 Ash Dr. San Jose, South Dakota 83475</a></li>
+                <li><a class="footer-list-link" href="mailto:test@gmail.com"><svg class="footer-svg" viewBox="0 0 24 24" width="20px" height="16px"><use href="./svg/footer-mail.svg#mail"></use></svg>test@gmail.com</a></li>
+                <li><a class="footer-list-link" href="tel:(303) 555-0105"><svg class="footer-svg" viewBox="0 0 24 24" width="18px" height="18px"><use href="./svg/footer-phone.svg#phone"></use></svg>(303) 555-0105</a></li>
+                <li><a class="footer-list-link" href="./index.html"><svg href="2715 Ash Dr. San Jose, South Dakota 83475" class="footer-svg" viewBox="0 0 24 24" width="24px" height="20px"><use href="./svg/footer-location.svg#location"></use></svg>2715 Ash Dr. San Jose, South Dakota 83475</a></li>
             </ul>
         </div>
 </div>
     </form>
+    <div class="footer-bottom"></div>
 </footer>
 
-<div class="footer-bottom"></div>
+
 </body>
 </html>
