--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,97 +8,162 @@
     <title>Round Rock Moving Services</title>
     <link rel="stylesheet" href="./css/main.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600&family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600&family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <!--Top section-->
     <section class="header-section">
-        
+
         <svg class="logo-top">
             <use width="581" height="129" viewbox="0 0 581 129" href="./svg/header-svg.svg#logo-top"></use>
         </svg>
-        <div class="header-box">
-            <h2 class="header-title">Moving Service</h2>
-            <div class="text-box">
-            <p class="header-text">Lorem Ipsum is simply dummy text of
-                 the printing and typesetting industry.
-                  Lorem Ipsum has been the industry's
-                   standard dummy text ever since the 
-                   1500s, when an unknown printer took a
-                    galley of type and scrambled it to make
-                     a type specimen book. It has survived
-                      not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-             It was popularised in the 1960s with the release of Letraset</p></div>
-             <div class="btn-wrapper">
-             <button class="header-btn-1">I Need Help</button>
-             <button class="header-btn-2">What the services</button>
-             </div>
+        <div class="header-wrapper-box">
+            <div class="header-box">
+                <h2 class="header-title">Moving Service</h2>
+                <div class="text-box">
+                    <p class="header-text">Lorem Ipsum is simply dummy text of
+                        the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's
+                        standard dummy text ever since the
+                        1500s, when an unknown printer took a
+                        galley of type and scrambled it to make
+                        a type specimen book. It has survived
+                        not only five centuries, but also the leap into electronic typesetting, remaining essentially
+                        unchanged.
+                        It was popularised in the 1960s with the release of Letraset</p>
+                </div>
+                <div class="btn-wrapper">
+                    <button class="header-btn-1">I Need Help</button>
+                    <button class="header-btn-2">What the services</button>
+                </div>
+            </div>
+            <div class="header-box-2">
+                <div class="box-2-mg">
+                    <h2 class="header-box2-title">Lorem Ipsum</h2>
+                    <div class="header-box2-textwrapper">
+                        <p class="header-box2-text">Lorem Ipsum is simply dummy text of the printing and typesetting
+                            industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when
+                            an unknown printer took a galley of type and scrambled it to make a type specimen book. It
+                            has survived not only five centuries, but also the leap into electronic typesetting,
+                            remaining essentially unchanged. It was popularised in the 1960s with the release of
+                            Letraset</p>
+                    </div>
+                    <div class="btn-wrapper">
+                        <button class="center-box2-btn">I need Help</button>
+                        <button class="header-btn-2 btn-2-bg">What the services</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
-<!--Center section-->
+    <!--Center section-->
     <section class="center-section">
-<div class="center-box1">
-    <div class="center-box1-wrapper">
-    <h2 class="center-box1-title">About Us</h2>
-    <p class="center-box1-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p></div>
-    <div class="center-box1-bgimg"></div>
-</div>
-   
-<div class="center-box2">
-    <h2 class="center-box2-title">We are family</h2>
-    <div class="center-box2-textwrapper"><p class="center-box2-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p></div>
-    <button class="center-box2-btn">I need Help</button>
-</div>
+        <div class="center-box1">
+            <div class="center-box1-wrapper">
+                <h2 class="center-box1-title">About Us</h2>
+                <p class="center-box1-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                    printer took a galley of type and scrambled it to make a type specimen book. It has survived not
+                    only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
+                    Ipsum.</p>
+            </div>
+            <div class="center-box1-bgimg"></div>
+        </div>
+
+        <div class="center-box2">
+            <h2 class="center-box2-title">We are family</h2>
+            <div class="center-box2-textwrapper">
+                <p class="center-box2-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                    printer took a galley of type and scrambled it to make a type specimen book. It has survived not
+                    only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem
+                    Ipsum.</p>
+            </div>
+            <button class="center-box2-btn">I need Help</button>
+        </div>
     </section>
 
-<!--Bottom Section-->
-<section class="bottom">
-    <div class="bottom-header">
-        <div class="bottom-header-box">
-        <h2 class="bottom-header-title">Services</h2></div>
-    </div>
-
-    <div class="bottom-wrapper">
-    <div class="bottom-boxes">
-        <img class="bottom-boxes-img" src="./img/bottom-1.png" alt="">
-        <div class="bottom-box-text"><h5 class="bottom-title-box">Lorem Ipsum</h5>
-    <p class="bottom-boxes-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p></div></div>
-    <div class="bottom-boxes"><img class="bottom-boxes-img" src="./img/bottom-2.png" alt=""><div class="bottom-box-text"><h5 class="bottom-title-box">Lorem Ipsum</h5><p class="bottom-boxes-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p></div></div>
-    <div class="bottom-boxes"><img class="bottom-boxes-img" src="./img/bottom-3.png" alt=""><div class="bottom-box-text"><h5 class="bottom-title-box">Lorem Ipsum</h5><p class="bottom-boxes-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p></div></div>
-    
-</div>
-
-<div class="bottom-btn-box">
-<button class="bottom-btn">I Need Help</button>
-</div>
-</section> 
-
-<footer class="footer">
-    <form action="">
-        <div class="footer-title-box">
-        <h2 class="footer-title">Contact Us</h2>
-        </div>
-<div class="footer-wrapper">
-        <div class="footer-boxes">
-            <input class="footer-input" type="text">
-            <input class="footer-input" type="text">
-            <input class="footer-input" type="text">
-            <button class="footer-btn">Send</button>
+    <!--Bottom Section-->
+    <section class="bottom">
+        <div class="bottom-header">
+            <div class="bottom-header-box">
+                <h2 class="bottom-header-title">Services</h2>
+            </div>
         </div>
 
-        <div>
-            <ul class="footer-list">
-                <li><a class="footer-list-link" href="mailto:test@gmail.com"><svg class="footer-svg" viewBox="0 0 24 24" width="20px" height="16px"><use href="./svg/footer-mail.svg#mail"></use></svg>test@gmail.com</a></li>
-                <li><a class="footer-list-link" href="tel:(303) 555-0105"><svg class="footer-svg" viewBox="0 0 24 24" width="18px" height="18px"><use href="./svg/footer-phone.svg#phone"></use></svg>(303) 555-0105</a></li>
-                <li><a class="footer-list-link" href="./index.html"><svg href="2715 Ash Dr. San Jose, South Dakota 83475" class="footer-svg" viewBox="0 0 24 24" width="24px" height="20px"><use href="./svg/footer-location.svg#location"></use></svg>2715 Ash Dr. San Jose, South Dakota 83475</a></li>
-            </ul>
+        <div class="bottom-wrapper">
+            <div class="bottom-boxes">
+                <img class="bottom-boxes-img" src="./img/bottom-1.png" alt="">
+                <div class="bottom-box-text">
+                    <h5 class="bottom-title-box">Lorem Ipsum</h5>
+                    <p class="bottom-boxes-text">Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                        unknown printer took a galley of type and scrambled</p>
+                </div>
+            </div>
+            <div class="bottom-boxes"><img class="bottom-boxes-img" src="./img/bottom-2.png" alt="">
+                <div class="bottom-box-text">
+                    <h5 class="bottom-title-box">Lorem Ipsum</h5>
+                    <p class="bottom-boxes-text">Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                        unknown printer took a galley of type and scrambled</p>
+                </div>
+            </div>
+            <div class="bottom-boxes"><img class="bottom-boxes-img" src="./img/bottom-3.png" alt="">
+                <div class="bottom-box-text">
+                    <h5 class="bottom-title-box">Lorem Ipsum</h5>
+                    <p class="bottom-boxes-text">Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                        unknown printer took a galley of type and scrambled</p>
+                </div>
+            </div>
+
         </div>
-</div>
-    </form>
-    <div class="footer-bottom"></div>
-</footer>
 
+        <div class="bottom-btn-box">
+            <button class="bottom-btn">I Need Help</button>
+        </div>
+    </section>
 
+    <footer class="footer">
+        <form action="">
+            <div class="footer-title-box">
+                <h2 class="footer-title">Contact Us</h2>
+            </div>
+            <div class="footer-wrapper">
+                <div class="footer-boxes">
+                    <input class="footer-input" type="text">
+                    <input class="footer-input" type="text">
+                    <input class="footer-input" type="text">
+                    <button class="footer-btn">Send</button>
+                </div>
+
+                <div>
+                    <ul class="footer-list">
+                        <li><a class="footer-list-link" href="mailto:test@gmail.com"><svg class="footer-svg"
+                                    viewBox="0 0 24 24" width="20px" height="16px">
+                                    <use href="./svg/footer-mail.svg#mail"></use>
+                                </svg>test@gmail.com</a></li>
+                        <li><a class="footer-list-link" href="tel:(303) 555-0105"><svg class="footer-svg"
+                                    viewBox="0 0 24 24" width="18px" height="18px">
+                                    <use href="./svg/footer-phone.svg#phone"></use>
+                                </svg>(303) 555-0105</a></li>
+                        <li><a class="footer-list-link" href="./index.html"><svg
+                                    href="2715 Ash Dr. San Jose, South Dakota 83475" class="footer-svg"
+                                    viewBox="0 0 24 24" width="24px" height="20px">
+                                    <use href="./svg/footer-location.svg#location"></use>
+                                </svg>2715 Ash Dr. San Jose, South Dakota 83475</a></li>
+                    </ul>
+                </div>
+            </div>
+        </form>
+        <div class="footer-bottom"></div>
+    </footer>
 </body>
 </html>
