-Added more hover effects

--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
         </div>
     </section>
 
+
+    <!-- Footer -->
     <footer class="footer">
         <form action="">
             <div class="footer-title-box">
