-Added adaptive style 1024 to 1920 px

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="./css/main.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600&family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600&family=Poppins:wght@400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -92,13 +94,14 @@
     <!--Bottom Section-->
     <section class="bottom">
         <div class="bottom-header">
-            <div class="bottom-header-box">
+            <!-- <div class="bottom-header-box">
                 <h2 class="bottom-header-title">Services</h2>
-            </div>
+            </div> -->
         </div>
 
         <div class="bottom-wrapper">
-            <div class="bottom-boxes">
+            <div class="bottom-first-box">
+                <h2 class="bottom-above-title">Services</h2>
                 <img class="bottom-boxes-img" src="./img/bottom-1.png" alt="">
                 <div class="bottom-box-text">
                     <h5 class="bottom-title-box">Lorem Ipsum</h5>
@@ -134,15 +137,15 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <form action="">
+        <form action="" class="footer-form">
             <div class="footer-title-box">
                 <h2 class="footer-title">Contact Us</h2>
             </div>
             <div class="footer-wrapper">
                 <div class="footer-boxes">
-                    <input class="footer-input" type="text">
-                    <input class="footer-input" type="text">
-                    <input class="footer-input" type="text">
+                    <input class="footer-input" type="text" required>
+                    <input class="footer-input" type="text" required>
+                    <input class="footer-input" type="text" required>
                     <button class="footer-btn">Send</button>
                 </div>
 
@@ -168,4 +171,5 @@
         <div class="footer-bottom"></div>
     </footer>
 </body>
+
 </html>
